--- a/src/style/index.less
+++ b/src/style/index.less
@@ -7,6 +7,8 @@
     .main-table {
         width: 50%;
         margin: 0 auto;
+        height: 624px;
+        overflow-y: auto;
     }
 
     thead > tr > th {
@@ -17,4 +19,10 @@
     .ant-table-cell {
         padding: 2px !important;
     }
+}
+
+.main-select-group {
+    width: 50%;
+    margin: 16px auto 0 auto;
+    text-align: center;
 }
