--- a/src/style/index.less
+++ b/src/style/index.less
@@ -9,6 +9,11 @@
         margin: 0 auto;
         height: 624px;
         overflow-y: auto;
+
+        .flag-icon {
+            height: 15px;
+            vertical-align: middle;
+        }
     }
 
     thead > tr > th {
