Declutter and use  useContext for state management

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -13,7 +13,7 @@
 }
 .main-table-container thead > tr > th {
   background-color: #399df0 !important;
-  color: #dfdfdf;
+  color: #f3f1f1;
 }
 .main-table-container .ant-table-cell {
   padding: 2px !important;
