--- a/src/style/index.less
+++ b/src/style/index.less
@@ -18,7 +18,7 @@
 
     thead > tr > th {
         background-color: @main-color !important;
-        color: #dfdfdf;
+        color: #f3f1f1;
     }
 
     .ant-table-cell {
