More logo and logo tweak

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -23,4 +23,7 @@
   margin: 16px auto 0 auto;
   text-align: center;
 }
+.main-select-group .session-select {
+  width: 120px;
+}
 /*# sourceMappingURL=index.css.map */
