--- a/src/style/index.less
+++ b/src/style/index.less
@@ -19,6 +19,7 @@
     thead > tr > th {
         background-color: @main-color !important;
         color: #f3f1f1;
+        text-align: center;
     }
 
     .ant-table-cell {
