--- a/src/style/index.less
+++ b/src/style/index.less
@@ -14,6 +14,19 @@
             height: 15px;
             vertical-align: middle;
         }
+
+        .logo-icon { 
+            font-size: 30px;
+            color: #000000;
+            vertical-align: middle;
+            margin-top: -8px; 
+            margin-bottom: -8px;
+        }
+
+        .row-fastest-lap {
+            background-color: #b249c3;
+            color: #ffffff;
+        }
     }
 
     thead > tr > th {
