Add grid to finish position changes to race result

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -38,4 +38,7 @@
 .main-select-group .session-select {
   width: 120px;
 }
+.main-select-group .chart-type-select {
+  width: 125px;
+}
 /*# sourceMappingURL=index.css.map */
