--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,8 +1,9 @@
 @main-color: #399df0;
 
-.main-table-container {    
+.main-detail-content-container {    
     
     font-size: 10px;
+    height: 625px;
 
     .main-table {
         width: 50%;
