--- a/src/style/index.less
+++ b/src/style/index.less
@@ -39,6 +39,11 @@
     .ant-table-cell {
         padding: 2px !important;
     }
+
+    .main-line-chart {
+        width: 800px;
+        margin: 0 auto;
+    }
 }
 
 .main-select-group {
