--- a/src/style/index.css
+++ b/src/style/index.css
@@ -31,6 +31,10 @@
 .main-detail-content-container .ant-table-cell {
   padding: 2px !important;
 }
+.main-detail-content-container .main-line-chart {
+  width: 800px;
+  margin: 0 auto;
+}
 .main-select-group {
   width: 50%;
   margin: 16px auto 0 auto;
