--- a/src/style/index.less
+++ b/src/style/index.less
@@ -27,6 +27,11 @@
         .row-fastest-lap {
             background-color: #b249c3;
             color: #ffffff;
+            
+            .ant-table-column-sort {
+                background-color: #b249c3;
+                color: #ffffff;
+            }
         }
     }
 
