--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,6 +1,7 @@
 .main-detail-content-container {
   font-size: 10px;
   height: 625px;
+  text-align: center;
 }
 .main-detail-content-container .main-table {
   width: 50%;
@@ -39,8 +40,14 @@
   padding: 2px !important;
 }
 .main-detail-content-container .main-line-chart {
-  width: 800px;
+  width: 760px;
   margin: 0 auto;
+  display: inline-block;
+}
+.main-detail-content-container .chart-data-type-select {
+  display: inline-block;
+  margin-left: 8px;
+  width: 155px;
 }
 .main-select-group {
   width: 50%;
