--- a/src/style/index.less
+++ b/src/style/index.less
@@ -6,6 +6,7 @@
     
     font-size: 10px;
     height: 625px;
+    text-align: center;
 
     .main-table {
         width: 50%;
@@ -52,8 +53,15 @@
     }
 
     .main-line-chart {
-        width: 800px;
+        width: 760px;
         margin: 0 auto;
+        display: inline-block;
+    }
+
+    .chart-data-type-select {
+        display: inline-block;
+        margin-left: 8px;
+        width: 155px;
     }
 }
 
