--- a/src/style/index.less
+++ b/src/style/index.less
@@ -9,7 +9,7 @@
     text-align: center;
 
     .main-table {
-        width: 50%;
+        width: 65%;
         margin: 0 auto;
         height: 624px;
         overflow-y: auto;
@@ -52,17 +52,23 @@
         padding: 2px !important;
     }
 
-    .main-line-chart {
-        width: 760px;
-        margin: 0 auto;
-        display: inline-block;
-    }
+    .main-line-chart-container{
+        
+        height: inherit;
 
-    .chart-data-type-select {
-        display: inline-block;
-        margin-left: 8px;
-        width: 155px;
+        .main-line-chart {
+            width: 760px;
+            margin: 0 auto;
+            display: inline-block;
+        }
+    
+        .chart-data-type-select {
+            display: inline-block;
+            margin-left: 8px;
+            width: 155px;
+        }
     }
+   
 }
 
 .main-select-group {
