--- a/src/style/index.less
+++ b/src/style/index.less
@@ -60,6 +60,7 @@
             width: 760px;
             margin: 0 auto;
             display: inline-block;
+            text-align: left;
         }
     
         .chart-data-type-select {
@@ -82,5 +83,24 @@
 
     .chart-type-select{
         width: 125px;
+    }
+}
+
+.track-info-container {
+
+    width: 300px;
+    text-align: center;
+
+    .track-image {
+        width: 200px;
+    }
+    .flag-icon {
+        height: 15px;
+        vertical-align: middle;
+        margin-bottom: 3px;
+    }
+
+    .track-info-text-container {
+        text-align: left;
     }
 }
