--- a/src/style/index.less
+++ b/src/style/index.less
@@ -8,10 +8,10 @@
 .main-detail-content-container {    
     
     font-size: 10px;
-    width: 90%;
+    width: 95%;
     height: 585px;
     text-align: center;
-    margin: 0 auto !important;
+    margin-left: 30px !important;
     border-radius: @card-border-radius !important;
 
     .ant-card-body {
@@ -97,7 +97,7 @@
 
 .track-info-container {
 
-    width: 90%;
+    width: 320px;
     text-align: center;
     border-radius: @card-border-radius !important;
 
@@ -107,6 +107,7 @@
 
     .track-image {
         width: 200px;
+        height: 140px;
     }
     .flag-icon {
         height: 15px;
