--- a/src/style/index.less
+++ b/src/style/index.less
@@ -98,6 +98,7 @@
 .track-info-container {
 
     width: 320px;
+    height: 277px;
     text-align: center;
     border-radius: @card-border-radius !important;
 
