--- a/src/style/index.less
+++ b/src/style/index.less
@@ -4,6 +4,7 @@
 
 @card-padding: 8px;
 @card-border-radius: 8px;
+@card-box-shadow: 3px 3px 3px 1px #cecece;
 
 @right-side-card-width: 320px; 
 
@@ -15,6 +16,7 @@
     text-align: center;
     margin-left: 30px !important;
     border-radius: @card-border-radius !important;
+    box-shadow: @card-box-shadow;
 
     .ant-card-body {
         padding: @card-padding;
@@ -99,6 +101,7 @@
     height: 277px;
     text-align: center;
     border-radius: @card-border-radius !important;
+    box-shadow: @card-box-shadow;
 
     .ant-card-body {
         padding: @card-padding;
@@ -137,6 +140,7 @@
     height: 200px;
     margin-top: 16px !important;
     border-radius: @card-border-radius !important;
+    box-shadow: @card-box-shadow;
 
     .ant-card-body {
         padding: @card-padding;
