--- a/src/style/index.less
+++ b/src/style/index.less
@@ -67,22 +67,17 @@
 
     .main-line-chart-container{
         
-        height: inherit;
-
+        text-align: left;
+        
         .main-line-chart {
-            width: 760px;
-            margin: 0 auto;
-            display: inline-block;
-            text-align: left;
+            margin-top: 16px;
+            height: 520px !important;
         }
     
         .chart-data-type-select {
-            display: inline-block;
-            margin-left: 8px;
             width: 155px;
         }
-    }
-   
+    }   
 }
 
 .main-select-group {
