--- a/src/style/index.less
+++ b/src/style/index.less
@@ -12,14 +12,29 @@
     
     font-size: 10px;
     width: 95%;
-    height: 585px;
-    text-align: center;
+    height: 640px;
     margin-left: 30px !important;
     border-radius: @card-border-radius !important;
     box-shadow: @card-box-shadow;
 
     .ant-card-body {
         padding: @card-padding;
+    }
+
+    .session-select{
+        width: 120px;
+    }
+
+    .chart-type-select{
+        width: 125px;
+    }
+
+    .ant-select-selection-item {
+        font-weight: 500;
+    }
+
+    .card-title {
+        font-weight: 500;
     }
 
     .main-table {
@@ -80,16 +95,6 @@
     }   
 }
 
-.main-select-group {
-    width: 50%;
-    margin: 16px auto 0 auto;
-    text-align: center;
-
-    .chart-type-select{
-        width: 125px;
-    }
-}
-
 .track-info-container {
 
     width: @right-side-card-width;
@@ -141,16 +146,8 @@
         padding: @card-padding;
     }
 
-    .ant-select-selection-item {
-        font-weight: 500;
-    }
-
     .card-title {
         font-weight: 500;
-    }
-
-    .session-select{
-        width: 120px;
     }
 
     .podium-container {
