--- a/src/style/index.css
+++ b/src/style/index.css
@@ -9,6 +9,13 @@
 .main-detail-content-container .ant-card-body {
   padding: 8px;
 }
+.main-detail-content-container .ant-card-head {
+  padding: 0 8px;
+}
+.main-detail-content-container .ant-card-head .ant-card-head-title {
+  padding-bottom: 2px;
+  padding-top: 8px;
+}
 .main-detail-content-container .session-select {
   width: 120px;
 }
