--- a/src/style/index.less
+++ b/src/style/index.less
@@ -21,6 +21,15 @@
         padding: @card-padding;
     }
 
+    .ant-card-head {
+        padding: 0 @card-padding;
+
+        .ant-card-head-title {
+            padding-bottom: 2px;
+            padding-top: @card-padding;
+        }
+    }
+    
     .session-select{
         width: 120px;
     }
