--- a/src/style/index.less
+++ b/src/style/index.less
@@ -49,7 +49,14 @@
     .main-table {
         margin: 0 auto;
         height: 575px;
-        overflow-y: auto;
+        overflow-y: scroll;
+        
+        -ms-overflow-style: none; /* for Internet Explorer, Edge */
+        scrollbar-width: none; /* for Firefox */
+
+        &::-webkit-scrollbar {
+            display: none; /* for Chrome, Safari, and Opera */
+        }
 
         .flag-icon {
             height: 15px;
