Add summary result menu

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -192,3 +192,21 @@
 .ant-layout .content-layout{
     background-color: #ececec;
 }
+
+.main-summary-content-container {
+    font-size: 8pt;
+    width: 95%;
+    margin-left: 30px !important;
+    border-radius: @card-border-radius !important;
+    box-shadow: @card-box-shadow;
+
+    .ant-table-cell {
+        padding: 2px !important;
+        font-size: 10pt;
+    }
+
+    .flag-icon {
+        height: 15px;
+        vertical-align: middle;
+    }
+}
