--- a/src/style/index.css
+++ b/src/style/index.css
@@ -147,4 +147,19 @@
 .ant-layout .content-layout {
   background-color: #ececec;
 }
+.main-summary-content-container {
+  font-size: 8pt;
+  width: 95%;
+  margin-left: 30px !important;
+  border-radius: 8px !important;
+  box-shadow: 3px 3px 3px 1px #cecece;
+}
+.main-summary-content-container .ant-table-cell {
+  padding: 2px !important;
+  font-size: 10pt;
+}
+.main-summary-content-container .flag-icon {
+  height: 15px;
+  vertical-align: middle;
+}
 /*# sourceMappingURL=index.css.map */
