--- a/src/style/index.less
+++ b/src/style/index.less
@@ -209,4 +209,17 @@
         height: 15px;
         vertical-align: middle;
     }
+
+    thead > tr > th {
+        text-align: center;
+    }
+
+    .table-header-country{
+        line-height: 16px;
+        padding: 4px 0 4px 0;
+    }
+
+    .table-result {
+        text-align: center;
+    }
 }
