--- a/src/style/index.less
+++ b/src/style/index.less
@@ -8,6 +8,10 @@
 
 @right-side-card-width: 320px; 
 
+.main-footer {
+    text-align: center;
+}
+
 .main-detail-content-container {    
     
     font-size: 10px;
