--- a/src/style/index.less
+++ b/src/style/index.less
@@ -225,5 +225,21 @@
 
     .table-result {
         text-align: center;
+        
+        &-first{
+            background-color: #ffdd34;
+        }
+
+        &-second{
+            background-color: #e2e2e2;
+        }
+        
+        &-third{
+            background-color: #d3a230;
+        }
+
+        &-points{
+            background-color: #bff5c9;
+        }
     }
 }
