--- a/src/style/index.css
+++ b/src/style/index.css
@@ -4,7 +4,6 @@
 .main-detail-content-container {
   font-size: 10px;
   width: 95%;
-  height: 640px;
   margin-left: 30px !important;
   border-radius: 8px !important;
   box-shadow: 3px 3px 3px 1px #cecece;
@@ -33,8 +32,6 @@
 }
 .main-detail-content-container .main-table {
   margin: 0 auto;
-  height: 575px;
-  overflow-y: scroll;
   -ms-overflow-style: none;
   /* for Internet Explorer, Edge */
   scrollbar-width: none;
@@ -157,34 +154,47 @@
   border-radius: 8px !important;
   box-shadow: 3px 3px 3px 1px #cecece;
 }
-.main-summary-content-container .ant-table-cell {
+.main-summary-content-container .ant-card-body {
+  padding: 8px;
+}
+.main-summary-content-container .ant-card-head {
+  padding: 0 8px;
+}
+.main-summary-content-container .ant-card-head .ant-card-head-title {
+  padding-bottom: 2px;
+  padding-top: 8px;
+}
+.main-summary-content-container .main-table {
+  margin: 0 auto;
+}
+.main-summary-content-container .main-table .ant-table-cell {
   padding: 2px !important;
   font-size: 10pt;
 }
-.main-summary-content-container .flag-icon {
+.main-summary-content-container .main-table .flag-icon {
   height: 15px;
   vertical-align: middle;
 }
-.main-summary-content-container thead > tr > th {
+.main-summary-content-container .main-table thead > tr > th {
   text-align: center;
 }
-.main-summary-content-container .table-header-country {
+.main-summary-content-container .main-table .table-header-country {
   line-height: 16px;
   padding: 4px 0 4px 0;
 }
-.main-summary-content-container .table-result {
+.main-summary-content-container .main-table .table-result {
   text-align: center;
 }
-.main-summary-content-container .table-result-first {
+.main-summary-content-container .main-table .table-result-first {
   background-color: #ffdd34;
 }
-.main-summary-content-container .table-result-second {
+.main-summary-content-container .main-table .table-result-second {
   background-color: #e2e2e2;
 }
-.main-summary-content-container .table-result-third {
+.main-summary-content-container .main-table .table-result-third {
   background-color: #d3a230;
 }
-.main-summary-content-container .table-result-points {
+.main-summary-content-container .main-table .table-result-points {
   background-color: #bff5c9;
 }
 /*# sourceMappingURL=index.css.map */
