Add driver list information

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -209,4 +209,7 @@
 .main-summary-content-container .main-table .table-result-points {
   background-color: #bff5c9;
 }
+.driver-list {
+  padding: 12px;
+}
 /*# sourceMappingURL=index.css.map */
