Update Driver List

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -222,11 +222,29 @@
   padding: 8px;
 }
 .driver-list .driver-card .driver-info {
-  font-size: 16pt;
+  font-size: 14pt;
   vertical-align: middle;
 }
 .driver-list .driver-card .driver-info .flag-icon {
-  height: 20px;
+  height: 16px;
+}
+.driver-list .driver-card .constructor-background {
+  top: 0;
+  left: 0;
+  height: 70px;
+  width: 100%;
+  position: absolute;
+  text-align: left;
+}
+.driver-list .driver-card .constructor-background .logo-icon {
+  font-size: 90px;
+  position: absolute;
+  top: -12px;
+  left: 4px;
+}
+.driver-list .driver-card .ant-divider.ant-divider-horizontal {
+  margin: 8px 0;
+  border: 1px solid #cecece59;
 }
 .driver-list .driver-card .driver-stats-group {
   width: 100%;
