--- a/src/style/index.less
+++ b/src/style/index.less
@@ -295,15 +295,35 @@
         }    
 
         .driver-info {
-            font-size: 16pt;
+            font-size: 14pt;
             vertical-align: middle;
 
             .flag-icon {
-                height: 20px;
+                height: 16px;
             }
         }
-        
 
+        .constructor-background{
+            top: 0; 
+            left: 0; 
+            height: 70px; 
+            width: 100%; 
+            position: absolute;
+            text-align: left;
+
+            .logo-icon {
+                font-size: 90px;
+                position: absolute;
+                top: -12px;
+                left: 4px;
+            }
+        }
+
+        .ant-divider.ant-divider-horizontal {
+            margin: 8px 0;
+            border: 1px solid #cecece59;
+        }
+        
         .driver-stats-group {
             width: 100%;
             justify-content: center;
