--- a/src/style/index.less
+++ b/src/style/index.less
@@ -310,6 +310,7 @@
             width: 100%; 
             position: absolute;
             text-align: left;
+            border-radius: @card-border-radius;
 
             .logo-icon {
                 font-size: 90px;
