--- a/src/style/index.less
+++ b/src/style/index.less
@@ -15,6 +15,13 @@
 
 @main-content-height: 600px;
 
+.main-header {
+    background-color: @main-color !important;
+    color: #ffffff !important;
+    font-size: 20px;
+    font-weight: bold;
+}
+
 .main-footer {
     text-align: center;
 }
@@ -214,6 +221,7 @@
 
 .ant-layout .content-layout{
     background-color: #ececec;
+    padding-top: 16px;
 }
 
 .main-summary-content-container {
