--- a/src/style/index.less
+++ b/src/style/index.less
@@ -289,6 +289,11 @@
     }
 }
 
+.driver-list-filter-card {
+    border-radius: @card-border-radius !important;
+    margin: 0 12px;
+}
+
 .driver-list {
     padding: 12px;
 
