--- a/src/style/index.less
+++ b/src/style/index.less
@@ -289,6 +289,13 @@
     }
 }
 
+.leaderboard {
+    .flag-icon {
+        height: 15px;
+        vertical-align: middle;
+    }
+}
+
 .driver-list-filter-card {
     border-radius: @card-border-radius !important;
     margin: 0 12px;
