--- a/src/style/index.less
+++ b/src/style/index.less
@@ -290,6 +290,10 @@
 }
 
 .leaderboard {
+    width: 95%;
+    border-radius: @card-border-radius !important;
+    box-shadow: @card-box-shadow;
+
     .flag-icon {
         height: 15px;
         vertical-align: middle;
