--- a/src/style/index.css
+++ b/src/style/index.css
@@ -167,7 +167,7 @@
 }
 .main-summary-content-container {
   font-size: 8pt;
-  width: 95%;
+  width: 96%;
   margin-left: 30px !important;
   border-radius: 8px !important;
   box-shadow: 3px 3px 3px 1px #cecece;
@@ -192,6 +192,11 @@
 }
 .main-summary-content-container .main-table .flag-icon {
   height: 15px;
+  vertical-align: middle;
+}
+.main-summary-content-container .main-table .logo-icon {
+  font-size: 20px;
+  color: #000000;
   vertical-align: middle;
 }
 .main-summary-content-container .main-table thead > tr > th {
