--- a/src/style/index.less
+++ b/src/style/index.less
@@ -226,7 +226,7 @@
 
 .main-summary-content-container {
     font-size: 8pt;
-    width: 95%;
+    width: 96%;
     margin-left: 30px !important;
     border-radius: @card-border-radius !important;
     box-shadow: @card-box-shadow;
@@ -255,6 +255,12 @@
     
         .flag-icon {
             height: 15px;
+            vertical-align: middle;
+        }
+
+        .logo-icon { 
+            font-size: 20px;
+            color: #000000;
             vertical-align: middle;
         }
     
