--- a/src/style/index.less
+++ b/src/style/index.less
@@ -244,6 +244,10 @@
         }
     }
 
+    .ant-collapse-header {
+        padding: 4px 0px 0px 8px !important;
+    }
+
     .main-table {
         margin: 0 auto;
         min-height: @main-content-height;
