--- a/src/style/index.css
+++ b/src/style/index.css
@@ -163,7 +163,7 @@
 }
 .ant-layout .content-layout {
   background-color: #ececec;
-  padding-top: 16px;
+  padding: 16px;
 }
 .main-summary-content-container {
   font-size: 8pt;
