--- a/src/style/index.less
+++ b/src/style/index.less
@@ -221,7 +221,7 @@
 
 .ant-layout .content-layout{
     background-color: #ececec;
-    padding-top: 16px;
+    padding: 16px;
 }
 
 .main-summary-content-container {
